--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 <body>
   <!-- navbar -->
   <section>
-    <nav class="navbar navbar-expand-lg position-fixed top-0 start-0 end-0  ">
+    <nav class="navbar navbar-expand-md position-fixed top-0 start-0 end-0  ">
       <div class="container">
         <h2><a class="navbar-brand nav-link " href="#">DevFolio</a></h2>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse  " id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-6">
             <div class="link">
@@ -675,8 +678,8 @@
   </section>
 
   <!-- script -->
-  <script src="js/jquery-3.6.1.min.js"></script>
   <script src="js/bootstrap.bundle.js"></script>
+  <script src="js/jquery-3.6.1.min.js"></script>
   <script src="js/index.js"></script>
 </body>
 
