--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-md position-fixed top-0 start-0 end-0  ">
       <div class="container">
         <h2><a class="navbar-brand nav-link " href="#">DevFolio</a></h2>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse  " id="navbarSupportedContent">
@@ -121,7 +121,7 @@
               <div class="row ">
 
 
-                <div class="col-sm-3 mb-4">
+                <div class="col-sm-3 my-5">
                   <div class="about-img ">
 
                     <div>
@@ -129,7 +129,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-sm-6 offset-sm-3 ">
+                <div class="col-sm-6 my-5 offset-sm-3 ">
                   <div class="info ">
                     <p>
                       <span>Name:</span>
@@ -174,16 +174,18 @@
           </div>
           <div class="col-md-6">
             <div class="about-info ">
-              <h2 class="mb-5">About me</h2>
-              <p>Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
+              <h2 class="my-5 mx-sm-5">About me</h2>
+              <div class="container">
+              <p class="text-center" >Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
                 imperdiet et, porttitor at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
                 Nulla porttitor accumsan tincidunt.</p>
-              <p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
+              <p class="text-center">Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
                 porttitor
                 volutpat. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.</p>
-              <p>Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Nulla
+              <p class="text-center">Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Nulla
                 porttitor accumsan tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.</p>
-            </div>
+              </div>
+              </div>
           </div>
         </div>
       </div>
@@ -442,27 +444,28 @@
   <!-- caruosal -->
   <section>
 
-    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-      <div class="carousel-indicators">
+    <div id="carouselExampleDark" class="carousel  carousel-dark slide" data-bs-ride="carousel">
+      <div class="carousel-indicators ">
+        <div class="text-center">
         <button type="button" data-bs-slide-to="0" data-bs-target="#carouselExampleDark"
-          class=" btn-1 bg-white border-0 rounded-circle" aria-current="true" aria-label="Slide 1"></button>
+          class=" btn-1 bg-light text-center border-0 rounded-circle" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleDark"
-          class="active btn-1 bg-white border-0 rounded-circle" data-bs-slide-to="1" aria-label="Slide 2"></button>
-
+          class="active btn-1 text-center bg-light border-0 rounded-circle" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        </div>
       </div>
       <div class="overlay">
-        <div class="carousel-inner   ">
+        <div class="carousel-inner  my-3 ">
           <div class="carousel-item active my-5" data-bs-interval="10000">
-            <img src="css/img/testimonial-2.jpg" class="d-block m-auto rounded-circle" alt="...">
-            <div class=" caption">
+            <img src="css/img/testimonial-2.jpg" class="my-4 d-block m-auto rounded-circle" alt="...">
+            <div class=" caption ">
               <h3 class="text-white">XAVI ALONSO</h3>
-              <p class="text-white lead w-50 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
+              <p class="text-white  lead w-50 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
                 necessitatibus illo sed cum officiis id beatae excepturi reiciendis consequatur porro?</p>
             </div>
           </div>
 
           <div class="carousel-item  my-5" data-bs-interval="2000">
-            <img src="css/img/testimonial-4.jpg" class="d-block m-auto rounded-circle" alt="...">
+            <img src="css/img/testimonial-4.jpg" class="my-4 d-block m-auto rounded-circle" alt="...">
             <div class=" caption">
               <h3 class="text-white">MARTA SOCRATE </h3>
               <p class="text-white lead w-50 m-auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
@@ -669,7 +672,7 @@
         <p class="text-white"> &#169; Copyright <span class="fs-5">DevFolio</span>. All Rights Reserved</p>
         <p class="text-white">Designed by BootstrapMade</p>
       </div>
-      <div class="fixed-arrow">
+      <div class="fixed-arrow  end-0">
         <button>
           <a href="#Home"><i class="fa-solid fa-circle-arrow-up fa-3x"></i></a>
         </button>
